Bug 521262 - XREDirProvider provides app chrome dir twice, making us parse manifests twice. r=bsmedberg